# observatory

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app_sync.py  db.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  temporal_client.py
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-04-09-temporal-observer.md  2026-04-10-data-sync-extension.md  2026-04-10-observer-web-app.md  2026-04-15-column-creation-observability.md  2026-04-20-precomputed-views.md  2026-04-20-sync-v2.md  2026-04-20-temporal-w-keybinding.md
migrations/: env.py
migrations/versions/: 29f546657002_relax_workflows_run_id.py  894b79180daf_split_workflows_into_base_plus_domain_.py  9b9d1b503cd6_add_openai_gpt_5_4_model_pricing.py  b1841590d353_add_claude_opus_4_7_pricing.py  b65116f293f4_add_materialized_views.py  d7c3b358ccae_add_settings_table.py  e3b75685e208_add_indexes_for_dashboard_and_list_.py  f17e8667f3bf_initial_schema.py
tests/: conftest.py  test_app_sync.py  test_db.py  test_mv_refresh.py  test_temporal_client.py
web/: .gitignore  instrumentation.ts  next.config.ts  package-lock.json  package.json  primer-primitives-11.6.0.tgz
web/app/: actions.ts  globals.css  layout.tsx  page.tsx
web/app/chats/: page.tsx
web/components/: activity-steps.tsx  chat-table.tsx  column-creation-table.tsx  copy-button.tsx  keyboard-context.tsx  keyboard-hints.tsx  message-list.tsx  nav-dropdown.tsx  sync-button.tsx  theme-toggle.tsx  use-keyboard-nav.ts
web/lib/: auto-sync.ts  db.ts  temporal-url.ts
web/package/: DESIGN_TOKENS_SPEC.md
(+24 files in other folders)
