[project]
name = "observer-app"
version = "0.1.0"
description = "Extracts Temporal workflow/activity data into PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.9.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
